added owl as submodule, moved tools to apps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,45 +21,52 @@ project(UMesh VERSION 1.0.0)
 
 cmake_minimum_required(VERSION 2.8)
 
-  if(NOT SET_UP_CONFIGURATIONS_DONE)
-    set(SET_UP_CONFIGURATIONS_DONE 1)
+if(NOT SET_UP_CONFIGURATIONS_DONE)
+  set(SET_UP_CONFIGURATIONS_DONE 1)
 
-    # No reason to set CMAKE_CONFIGURATION_TYPES if it's not a multiconfig generator
-    # Also no reason mess with CMAKE_BUILD_TYPE if it's a multiconfig generator.
-    if(CMAKE_CONFIGURATION_TYPES) # multiconfig generator?
-      set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE) 
-    else()
-      if(NOT CMAKE_BUILD_TYPE)
-	#            message("Defaulting to release build.")
-        set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
-      endif()
-      set_property(CACHE CMAKE_BUILD_TYPE PROPERTY HELPSTRING "Choose the type of build")
-      # set the valid options for cmake-gui drop-down list
-      set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug;Release")
+  # No reason to set CMAKE_CONFIGURATION_TYPES if it's not a multiconfig generator
+  # Also no reason mess with CMAKE_BUILD_TYPE if it's a multiconfig generator.
+  if(CMAKE_CONFIGURATION_TYPES) # multiconfig generator?
+    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE) 
+  else()
+    if(NOT CMAKE_BUILD_TYPE)
+      #            message("Defaulting to release build.")
+      set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
     endif()
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY HELPSTRING "Choose the type of build")
+    # set the valid options for cmake-gui drop-down list
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug;Release")
   endif()
+endif()
 
-  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 
 
+# ------------------------------------------------------------------
+# include owl, for owl::parallel_for and owl::vec3f
+# -----------------------------------------------------------------
 
-set(owl_dir ${PROJECT_SOURCE_DIR}/../owl)
-#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${gdt_dir}/cmake/")
+set(owl_dir ${PROJECT_SOURCE_DIR}/submodules/owl)
 add_subdirectory(${owl_dir} external_owl EXCLUDE_FROM_ALL)
-
-add_definitions(${OWL_CXX_FLAGS})
 
 # ------------------------------------------------------------------
 # common settings across entire project
 # -----------------------------------------------------------------
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${OWL_INCLUDES})
+add_definitions(${OWL_CXX_FLAGS})
+
 
 # ------------------------------------------------------------------
 # everything relating to umesh format/data/library
 # -----------------------------------------------------------------
 add_subdirectory(umesh)
+
+# ------------------------------------------------------------------
+# cmdline-tools
+# -----------------------------------------------------------------
+add_subdirectory(apps)
 
