exporting to parent scope only if submoudle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,12 @@ if (POLICY CMP0048)
 endif()
 project(UMesh VERSION 1.2.0)
 
+if (NOT (${PROJECT_SOURCE_DIR} STREQUAL ${CMAKE_HOME_DIRECTORY}))
+  SET(UMESH_IS_SUBPROJECT ON)
+else()
+  SET(UMESH_IS_SUBPROJECT OFF)
+endif()
+
 cmake_minimum_required(VERSION 2.8)
 
 if(NOT SET_UP_CONFIGURATIONS_DONE)
@@ -72,7 +78,9 @@ add_subdirectory(apps)
 
 
 # export owl variables back up to parent, in case parent needs to use OWL
-set(UMESH_LIBRARIES umesh ${OWL_LIBRARIES} PARENT_SCOPE)
-set(UMESH_INCLUDES ${PROJECT_SOURCE_DIR} ${OWL_INCLUDES} PARENT_SCOPE)
-set(UMESH_CXX_FLAGS ${OWL_CXX_FLAGS} PARENT_SCOPE)
-set(OWL_VIEWER_LIBRARIES ${OWL_VIEWER_LIBRARIES} PARENT_SCOPE)
+if (UMESH_IS_SUBPROJECT)
+  set(UMESH_LIBRARIES umesh ${OWL_LIBRARIES} PARENT_SCOPE)
+  set(UMESH_INCLUDES ${PROJECT_SOURCE_DIR} ${OWL_INCLUDES} PARENT_SCOPE)
+  set(UMESH_CXX_FLAGS ${OWL_CXX_FLAGS} PARENT_SCOPE)
+  set(OWL_VIEWER_LIBRARIES ${OWL_VIEWER_LIBRARIES} PARENT_SCOPE)
+endif()
