moved fun3d scalar reader out into library

--- a/umesh/CMakeLists.txt
+++ b/umesh/CMakeLists.txt
@@ -44,6 +44,9 @@ add_library(umesh
   # fun3d format
   io/ugrid32.cpp
 
+  # fun3d _data_ files with scalar fields/variables
+  io/fun3dScalars.cpp
+  
   # nateive .umesh format
   io/UMesh.cpp
 
