isolated face-connectivity computation from shell extraction - it's useful or other stuff as well

--- a/umesh/CMakeLists.txt
+++ b/umesh/CMakeLists.txt
@@ -33,6 +33,8 @@ add_library(umesh
   TetConn.h
   TetConn.cpp
 
+  FaceConn.h
+  FaceConn.cpp
   
   # ------------------------------------------------------------------
   # I/O routines that can directly read into a umesh class
