converted to modern cmake, and cuda support optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ======================================================================== #
-# Copyright 2018-2020 Ingo Wald                                            #
+# Copyright 2018-2022 Ingo Wald                                            #
 #                                                                          #
 # Licensed under the Apache License, Version 2.0 (the "License");          #
 # you may not use this file except in compliance with the License.         #
@@ -14,10 +14,17 @@
 # limitations under the License.                                           #
 # ======================================================================== #
 
+option(UMESH_USE_CUDA "Build w/ CUDA support?" OFF)
+cmake_minimum_required(VERSION 3.10)
+
 if (POLICY CMP0048)
   cmake_policy(SET CMP0048 NEW)
 endif()
-project(UMesh VERSION 1.3.0)
+if (UMESH_USE_CUDA)
+  project(UMesh VERSION 1.4.0 LANGUAGES C CXX CUDA)
+else()
+  project(UMesh VERSION 1.4.0 LANGUAGES C CXX)
+endif()
 
 if (NOT (${PROJECT_SOURCE_DIR} STREQUAL ${CMAKE_HOME_DIRECTORY}))
   SET(UMESH_IS_SUBPROJECT ON)
@@ -25,7 +32,6 @@ else()
   SET(UMESH_IS_SUBPROJECT OFF)
 endif()
 
-cmake_minimum_required(VERSION 2.8)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}")
 
 if(NOT SET_UP_CONFIGURATIONS_DONE)
@@ -50,60 +56,18 @@ if(NOT SET_UP_CONFIGURATIONS_DONE)
   SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 endif()
 
-set(UMESH_INCLUDES ${PROJECT_SOURCE_DIR})
-
-if (WIN32)
-  OPTION(UMESH_USE_TBB "Use TBB to parallelize host-side code?" OFF)
-else()
-  OPTION(UMESH_USE_TBB "Use TBB to parallelize host-side code?" ON)
-endif()
-
-if (UMESH_USE_TBB)
-  find_package(TBB)
-  if (TBB_FOUND)
-    #    include_directories(${TBB_INCLUDE_DIR})
-    set(UMESH_CXX_FLAGS "${UMESH_CXX_FLAGS} -DUMESH_HAVE_TBB=1")
-    set(UMESH_HAVE_TBB ON)
-    
-    set(UMESH_INCLUDES ${UMESH_INCLUDES} ${TBB_INCLUDE_DIR})
-    set(UMESH_LIBRARIES ${UMESH_LIBRARIES} ${TBB_LIBRARIES})
-    set(UMESH_DEFINITIONS -DUMESH_HAVE_TBB=1)
-  else()
-    set(UMESH_HAVE_TBB OFF)
-    message("#umesh.cmake: TBB not found; falling back to serial execution of umesh::parallel_for")
-  endif()
-endif()
-
-# try to find CUDA; if we can't find it we'll simply disable all the
-# tools that need it
-find_package(CUDA)
-if (CUDA_FOUND)
-  CUDA_SELECT_NVCC_ARCH_FLAGS(ARCH_FLAGS Auto)
-  LIST(APPEND CUDA_NVCC_FLAGS ${ARCH_FLAGS})
-  #message("selected cuda arch flags '${ARCH_FLAGS}'")
-endif()
-
-
-# ------------------------------------------------------------------
-# common settings across entire project
-# -----------------------------------------------------------------
-include_directories(${UMESH_INCLUDES})
-add_definitions(${UMESH_DEFINITIONS})
-
 # ------------------------------------------------------------------
 # everything relating to umesh format/data/library
 # -----------------------------------------------------------------
 add_subdirectory(umesh)
 
 # ------------------------------------------------------------------
+# converters into/out of umesh
+# -----------------------------------------------------------------
+add_subdirectory(converters)
+
+# ------------------------------------------------------------------
 # cmdline-tools
 # -----------------------------------------------------------------
 add_subdirectory(apps)
 
-# export our make variables back up to parent, so parent can do things
-# like "include_directories(${UMESH_INCLUDES})" etc
-if (UMESH_IS_SUBPROJECT)
-  set(UMESH_LIBRARIES ${UMESH_LIBRARIES} umesh PARENT_SCOPE)
-  set(UMESH_INCLUDES ${UMESH_INCLUDES} PARENT_SCOPE)
-  set(UMESH_DEFINITIONS ${UMESH_DEFINITIONS} PARENT_SCOPE)
-endif()
