--- a/umesh/CMakeLists.txt
+++ b/umesh/CMakeLists.txt
@@ -15,9 +15,50 @@
 # ======================================================================== #
 
 # ------------------------------------------------------------------
+# common settings across entire project
+# -----------------------------------------------------------------
+add_library(umesh)
+
+if (WIN32)
+  OPTION(UMESH_USE_TBB "Use TBB to parallelize host-side code?" OFF)
+else()
+  OPTION(UMESH_USE_TBB "Use TBB to parallelize host-side code?" ON)
+endif()
+
+if (UMESH_USE_TBB)
+  find_package(TBB)
+  if (TBB_FOUND)
+    set(UMESH_HAVE_TBB ON)
+
+    message(STATUS "linking umesh to  ${TBB_LIBRARIES}")
+    target_link_libraries(umesh PUBLIC ${TBB_LIBRARY} ${TBB_LIBRARIES})
+    target_include_directories(umesh PUBLIC
+      ${TBB_INCLUDE_DIR}
+      ${PROJECT_SOURCE_DIR}
+      )
+    target_compile_definitions(umesh PUBLIC -DUMESH_HAVE_TBB=1)
+  else()
+    set(UMESH_HAVE_TBB OFF)
+    message("#umesh.cmake: TBB not found; falling back to serial execution of umesh::parallel_for")
+  endif()
+endif()
+
+# try to find CUDA; if we can't find it we'll simply disable all the
+# tools that need it
+if (UMESH_USE_CUDA)
+  find_package(CUDA)
+  if (CUDA_FOUND)
+    CUDA_SELECT_NVCC_ARCH_FLAGS(ARCH_FLAGS Auto)
+    LIST(APPEND CUDA_NVCC_FLAGS ${ARCH_FLAGS})
+    #message("selected cuda arch flags '${ARCH_FLAGS}'")
+  endif()
+endif()
+
+
+# ------------------------------------------------------------------
 # main umesh/umesh library and classes
 # ------------------------------------------------------------------
-add_library(umesh
+target_sources(umesh PRIVATE
   # ------------------------------------------------------------------
   # the class itself, with whatever is requited to create and
   # manipulate it
@@ -72,16 +113,11 @@ add_library(umesh
   extractSurfaceMesh.cpp
   )
 
-target_link_libraries(umesh
-  ${UMESH_LIBRARIES}
-  )
-set(UMESH_LIBRARIES ${UMESH_LIBRARIES} umesh)
+#target_link_libraries(umesh
+#  PUBLIC
+#  umesh_common
+#  )
 
-# ------------------------------------------------------------------
-# converters, that convert from one set of files in another format to
-# umesh
-# ------------------------------------------------------------------
-add_subdirectory(converters)
 
 
 
