Add the converter from umesh to vtu

--- a/converters/vtu/CMakeLists.txt
+++ b/converters/vtu/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(VTK COMPONENTS
   vtkRenderingFreeType
   vtkRenderingOpenGL2 QUIET)
 if (NOT VTK_FOUND)
-  message("Skipping readVTU: ${VTK_NOT_FOUND_MESSAGE}")
+  message("VTK Not Found. Skipping readVTU.")
   return ()
 endif()
 message (STATUS "VTK_VERSION: ${VTK_VERSION}")
@@ -21,10 +21,14 @@ if (VTK_VERSION VERSION_LESS "8.90.0")
   include(${VTK_USE_FILE})
   add_executable(readVTU MACOSX_BUNDLE readVTU.cpp )
   target_link_libraries(readVTU PRIVATE ${VTK_LIBRARIES})
+  add_executable(writeVTU MACOSX_BUNDLE writeVTU.cpp )
+  target_link_libraries(writeVTU PRIVATE ${VTK_LIBRARIES} umesh)
 else ()
   # include all components
   add_executable(readVTU MACOSX_BUNDLE readVTU.cpp )
   target_link_libraries(readVTU PRIVATE ${VTK_LIBRARIES})
+  add_executable(writeVTU MACOSX_BUNDLE writeVTU.cpp )
+  target_link_libraries(writeVTU PRIVATE ${VTK_LIBRARIES} umesh)
   # vtk_module_autoinit is needed
   vtk_module_autoinit(
     TARGETS readVTU
